      - The debugger now generates DASM-compatible disassembled code,
        which can be saved to an external file.  This disassembly is
        based on both a static and runtime analysis, and is extremely
        accurate.  It also automatically differentiates between
        CODE/PGFX/GFX/DATA/ROW areas, whereas normal Distella
        only differentiates between CODE/GFX/ROW.  For now, only
        single-bank (4K and smaller) ROMs are supported.

      - The disassembly now recognizes various TIA/RIOT read/write
        mirrors, and marks them as such (for example, INPT4|$30 instead
        of INPT4 for address $3C).  Special thanks to Omegamatrix for
        sample code and idea for this feature.

      - ROMS less than 2K in size (so called 'Sub2K' ROMs) now show only
        the actual data in the binary.  This means, for example, that a
        256 byte ROM will show only 256 bytes in the disassembly, instead
        of padding duplicated data to 2K boundary.

      - Fixed labelling in ROW directives; it wasn't accurately setting
        a label in the case where it occurred in the middle of the data.

      - Added a new dialog for changing Distella settings, located by
        right-clicking the disassembly code.

      - The commandline option 'dis.resolvedata' has been renamed to
        'dis.resolve', with new usage (see manual for further details).

  * Fixed regression in handling ZIP files (as compared to version 3.7.5)
    created with newer versions of the ZIP program.  Related to this, added
    better error messages for invalid/missing/unreadable ROM files.

  * Added 'snapname' commandline argument and associated UI item, for
    specifying whether snapshots should be saved using either the internal
    ROM database name or the actual ROM filename.  This feature was
    present in older releases of Stella, and due to popular demand it's
    now back again.

  * Fixed bug in Linux/OSX versions when starting Stella for the first